fix: filter dropdown menu alignment for below 1200px resolution in org-chart  (#154)
fix: filter dropdown menu alignment for below 1200px resolution in org-chart

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -150,7 +150,7 @@
                 }
                 
                 @extend .row,.gap-3,.flex-wrap,.w-100,.bg-transparent;
-                @media (max-width:1279px) {
+                @media (max-width:1200px) {
                     gap: 10px !important;
                 }
                 & div{
